--- a/index.html
+++ b/index.html
@@ -17,35 +17,52 @@
         <button class="start" type="button" onclick="start()">INICIO</button>
         <div id="message"></div>
     </header>
-	  <main class="mainContainer">
-          <div class="cell">
-              <input disabled class="inputCells" id="0" onclick="clickControl(0,3,6,0)">;
-          </div>
-          <div class="cell">
-              <input disabled class="inputCells" id="1" onclick="clickControl(0,4,8,1)">;
-          </div>
-          <div class="cell">
-              <input disabled class="inputCells" id="2" onclick="clickControl(0,5,7,2)">
-          </div>
-          <div class="cell">
-              <input disabled class="inputCells" id="3" onclick="clickControl(1,3,8,3)">
-          </div>
-          <div class="cell">
-              <input disabled class="inputCells" id="4" onclick="clickControl(1,4,9,4)">
-          </div>
-          <div class="cell">
-              <input disabled class="inputCells" id="5" onclick="clickControl(1,5,8,5)">  
-          </div>
-          <div class="cell">
-              <input disabled class="inputCells" id="6" onclick="clickControl(2,3,7,6)">  
-          </div>
-          <div class="cell">
-              <input disabled class="inputCells" id="7" onclick="clickControl(2,4,8,7)">
-          </div>
-          <div class="cell">
-              <input disabled class="inputCells" id="8" onclick="clickControl(2,5,6,8)">
-          </div>
-      </main>
+        <main class="mainContainer">
+            <div class="cell">
+                <input disabled class="inputCells" id="0" onclick="clickControl(0,3,6,0)">;
+            </div>
+            <div class="cell">
+                <input disabled class="inputCells" id="1" onclick="clickControl(0,4,8,1)">;
+            </div>
+            <div class="cell">
+                <input disabled class="inputCells" id="2" onclick="clickControl(0,5,7,2)">
+            </div>
+            <div class="cell">
+                <input disabled class="inputCells" id="3" onclick="clickControl(1,3,8,3)">
+            </div>
+            <div class="cell">
+                <input disabled class="inputCells" id="4" onclick="clickControl(1,4,9,4)">
+            </div>
+            <div class="cell">
+                <input disabled class="inputCells" id="5" onclick="clickControl(1,5,8,5)">  
+            </div>
+            <div class="cell">
+                <input disabled class="inputCells" id="6" onclick="clickControl(2,3,7,6)">  
+            </div>
+            <div class="cell">
+                <input disabled class="inputCells" id="7" onclick="clickControl(2,4,8,7)">
+            </div>
+            <div class="cell">
+                <input disabled class="inputCells" id="8" onclick="clickControl(2,5,6,8)">
+            </div>
+        </main>
+        <div class="instructions">
+            <p><a href="#popup">Instrucciones</a></p>
+            <div id="popup" class="overlay">
+                <div id="popupBody">
+                    <h2>Instrucciones</h2>
+                    <a id="cerrar" href="#">x</a>
+                    <div class="popupContent">
+                        <p>Este es el contenido</p>
+                    </div>
+                </div>
+            </div>          
+        </div>
+        <div class="level">
+            <button id="hard" class ="active" onclick="level(false,'hard')">difícil</button>
+            <p>elige un nivel</p>
+            <button id="imposible" onclick="level(true,'imposible')">demencial</button>
+        </div>
     <footer class="footer">
     </footer>
   </body>
