si no me da tiempo a más ya está terminado

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="js/js.js"></script>
     <link type="text/css" rel="stylesheet" href="css/normalize.css">
     <link type="text/css" rel="stylesheet" href="css/styles.css">
- <!--    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_santi.png"> -->
+    <link rel="icon" type="image/png" sizes="32x32" href="media/favicon.png">
 	<meta name="description" content="Juego de Tres en Raya">
   </head>
   <body>
@@ -17,7 +17,6 @@
             <button type="button" id="false" class="active" onclick="players(false)">1 jugador</button>
             <button type="button" id="true" onclick="players(true)">2 jugadores</button>
         </div>
-        <p class="info">Para comenzar el juego pulsa el botón INICIO</p>
         <button class="start" type="button" onclick="start()">INICIO</button>
         <div id="message"></div>
     </header>
