--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
                     <div class="popupContent">
                         <p>Gracias por visitar nuestra página.</p>
                         <p>Este es el conocido tres en raya, lo único que tienes que hacer es intentar formar una linea de tres.</p>
-                        <p>Puedes elegir el nivel, en caso de no elegirlo jugarás al nivel difícil. 
+                        <p>Puedes jugar contra la máquina o jugar con un compañero.</p>
+                        <p>Si juegas contra la máquina puedes elegir el nivel, en caso de no elegirlo jugarás al nivel difícil. 
                             Si te atreves puedes elegir el modo demencial.
                         </p>
+                        <p>En el caso de jugar contra otro jugador, os alternaréis a la hora de elegir casilla.</p>
                         <p>Para comenzar a jugar haz click en INICIO.</p>
                         <p>¡Suerte!!</p>
                     </div>
